// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writeFile writes test data into a new file 1`] = `
{
  "/ui/theme/file-name.js": "
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
    module.exports = {
      a: 1,
      b: 2,
      c: 3,
    };
    
    ",
}
`;

exports[`writeFile writes test data without eslint rules on the begin of the file 1`] = `
{
  "/ui/theme/file-name.js": "
    module.exports = {
      a: 1,
      b: 2,
      c: 3,
    };
    ",
}
`;
